; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtShell.c_mgmtCleanUpShell.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtShell.c_mgmtCleanUpShell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pShellConn = common dso_local global i32* null, align 8
@connList = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mgmtCleanUpShell() #0 {
  %1 = load i32*, i32** @pShellConn, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @pShellConn, align 8
  %5 = call i32 @taosCloseRpc(i32* %4)
  br label %6

6:                                                ; preds = %3, %0
  store i32* null, i32** @pShellConn, align 8
  %7 = load i32, i32* @connList, align 4
  %8 = call i32 @tfree(i32 %7)
  ret void
}

declare dso_local i32 @taosCloseRpc(i32*) #1

declare dso_local i32 @tfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
